Agregar modelo categoria

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -31,5 +31,9 @@
   "Role": {
     "dataSource": "db",
     "public": false
+  },
+  "Categoria": {
+    "dataSource": "db",
+    "public": true
   }
 }
