agregar modelo multa

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -35,5 +35,9 @@
   "Categoria": {
     "dataSource": "db",
     "public": true
+  },
+  "Multa": {
+    "dataSource": "db",
+    "public": true
   }
 }
