Agregar modelo articulo

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -39,5 +39,9 @@
   "Multa": {
     "dataSource": "db",
     "public": true
+  },
+  "Articulo": {
+    "dataSource": "db",
+    "public": true
   }
 }
